--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <meta property="og:type" content="website">
   </head>
   <body data-home-page="https://website2199712.nicepage.io/DuckClicker.html?version=533da882-c613-4cbc-b190-9fb827ff0d4c" data-home-page-title="DuckClicker" class="u-body u-xl-mode"><header class="u-clearfix u-custom-color-1 u-header u-header" id="sec-a112"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-xl u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="500" data-image-height="500">
+        <a href="duckclicker.pl class="u-image u-logo u-image-1" data-image-width="500" data-image-height="500">
           <img src="images/logo.png" class="u-logo-image u-logo-image-1">
         </a>
         <h2 class="u-text u-text-default u-text-1">Download na discordzie!</h2>
@@ -48,7 +48,7 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-title u-text-1">DuckClicker</h1>
         <p class="u-large-text u-text u-text-default u-text-variant u-text-2">Twój ulubiony clicker do miencraft</p>
-        <a href="#" class="u-btn u-btn-round u-button-style u-hover-feature u-palette-1-light-1 u-radius-20 u-btn-1">Discord</a>
+        <a href="https://discord.gg/QgVXGRCQqf" class="u-btn u-btn-round u-button-style u-hover-feature u-palette-1-light-1 u-radius-20 u-btn-1">Discord</a>
       </div>
       
     </section>
