--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": "WebSite2206681",
+		"name": "DuckClicker - twój ulubiony clicker do Minecraft",
 		"url": "/",
 		"logo": "images/logo.png",
 		"sameAs": [
