--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="keywords" content="duck,clicker,kliker,duckclicker,duckkliker,pvp,minecraft">
-    <meta name="description" content="">
+    <meta name="description" content="DuckClicker - twój ulubiony clicker do Minecraft">
     <title>DuckClicker</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="DuckClicker.css" media="screen">
@@ -37,9 +37,9 @@
     <meta name="twitter:site" content="@">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="DuckClicker">
-    <meta name="twitter:description" content="WebSite2206681">
+    <meta name="twitter:description" content="DuckClicker - twój ulubiony clicker do Minecraft">
     <meta property="og:title" content="DuckClicker">
-    <meta property="og:description" content="">
+    <meta property="og:description" content="DuckClicker - twój ulubiony clicker do Minecraft">
     <meta property="og:type" content="website">
   </head>
   <body data-home-page="https://website2206681.nicepage.io/DuckClicker.html?version=a954b3f2-13ca-4e09-8924-f999b9ea45f7" data-home-page-title="DuckClicker" class="u-body u-xl-mode"><header class="u-clearfix u-custom-color-1 u-header u-header" id="sec-944c"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
