--- a/DuckClicker.html
+++ b/DuckClicker.html
@@ -32,7 +32,7 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
-  <body class="u-body u-xl-mode"><header class="u-clearfix u-custom-color-1 u-header u-header" id="sec-944c"><div class="u-clearfix u-sheet u-valign-middle-sm u-sheet-1">
+  <body class="u-body u-xl-mode"><header class="u-clearfix u-custom-color-1 u-header u-header" id="sec-944c"><div class="u-clearfix u-sheet u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <a href="#" class="u-image u-logo u-image-1" data-image-width="500" data-image-height="500" title="logo">
           <img src="images/logo.png" class="u-logo-image u-logo-image-1">
         </a>
