--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="keywords" content="duck,clicker,kliker,duckclicker,duckkliker,pvp,minecraft">
-    <meta name="description" content="">
+    <meta name="description" content="Twój ulubiony clicker do Minecraft!">
+<link rel="icon" href="images/logo.ico" type="image/x-icon" />
     <title>DuckClicker</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="DuckClicker.css" media="screen">
@@ -236,9 +237,9 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
     
     <footer class="u-clearfix u-footer u-grey-80" id="sec-eae1"><div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-align-left u-social-icons u-spacing-10 u-social-icons-1">
-          <a class="u-social-url" title="linkedin" target="_blank" href="https://www.tiktok.com/@duckclicker"><span class="u-file-icon u-icon u-social-icon u-social-linkedin u-text-custom-color-1 u-icon-1"><img src="images/3046126-38.png" alt=""></span>
+          <a class="u-social-url" title="tiktok" target="_blank" href="https://www.tiktok.com/@duckclicker"><span class="u-file-icon u-icon u-social-icon u-social-linkedin u-text-custom-color-1 u-icon-1"><img src="images/3046126-38.png" alt=""></span>
           </a>
-          <a class="u-social-url" target="_blank" data-type="Custom" title="Custom" href="https://discord.gg/QgVXGRCQqf"><span class="u-file-icon u-icon u-social-custom u-social-icon u-text-custom-color-1 u-icon-2"><img src="images/5968756-39.png" alt=""></span>
+          <a class="u-social-url" target="_blank" data-type="Custom" title="discord" href="https://discord.gg/QgVXGRCQqf"><span class="u-file-icon u-icon u-social-custom u-social-icon u-text-custom-color-1 u-icon-2"><img src="images/5968756-39.png" alt=""></span>
           </a>
         </div>
         <a href="#" class="u-image u-logo u-image-1" data-image-width="500" data-image-height="500" title="logo">
